2013-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-submit): Make form submission work.

	* shr.el (shr-descend): Allow other packages to override (or provide)
	rendering of elements.
	(shr-expand-url): Strip query strings from URLs before expanding them.

	* eww.el: Don't require cl-lib.
	(eww-tag-form): Start form support.

	* dgnushack.el (dgnushack-compile): Ignore eww on XEmacs.

	* eww.el: Start writing a new, tiny web browser.
	(eww-previous-url): New command.
	(eww-quit): New command.

2013-06-10  Albert Krewinkel  <krewinkel@moltkeplatz.de>

	* sieve.el: Put point at beginning of buffer when viewing a script.
	(sieve-open-server): respect the PORT parameter. Show the correct port
	number in sieve-buffer's header. Fixed code to also work with a string
	as port specifier. Properly close the connection on pressing 'q'. Make
	sieve-manage-quit close the connection and process buffer. Also, remove
	duplicate keybinding for 'q'.

2013-06-10  Roy Hashimoto <roy.hashimoto@gmail.com>  (tiny change)

	* mm-view.el (mm-pkcs7-signed-magic): Allow newline in the regexp and
	make it easier to read.
	(mm-pkcs7-enveloped-magic): Ditto.

2013-06-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-ems.el (gnus-image-type-available-p): Test `display-images-p'
	before `image-type-available-p' to avoid loading the image libraries
	needlessly.

2013-06-05  David Engster  <deng@randomsample.de>

	* gnus-sum.el (gnus-update-marks): Do not remove empty 'unexist'
	ranges, since `nnimap-retrieve-group-data-early' also uses it as a flag
	to see whether the group was synced before.

2013-06-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* tls.el (open-tls-stream): Remove unneeded buffer contents up to point
	when opening the connection.
	Suggested by João Távora <joaotavora@gmail.com> in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-05/msg00464.html>.

2013-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-date-ut, article-update-date-lapsed): Don't